Solved few restart bug and alignment issue

--- a/src/app/features/game-view/game-view.component.css
+++ b/src/app/features/game-view/game-view.component.css
@@ -166,7 +166,7 @@ ol {
   .fa.fa-power-off {
     left: 5px;
     top: 5px;
-    padding: 0.8% 0 0 1%;
+    padding: 0.8% 0 0 1.1%;
     width: 20px;
     height: 20px;
     font-size: 13px;
